--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /.project
 /.vs
 /packages
+obj/Debug/App.g.cs
+obj/Debug/App.g.i.cs
+obj/Debug/MainWindow.baml
+obj/Debug/MainWindow.g.cs
+obj/Debug/MainWindow.g.i.cs
+obj/Debug/TTS Companion.csprojAssemblyReference.cache
+obj/Debug/TTS_Companion_MarkupCompile.cache
