--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CSCore" version="1.2.1.2" targetFramework="net452" />
+  <package id="CSCore" version="1.2.1.2" targetFramework="net461" />
+  <package id="Google.Api.CommonProtos" version="2.0.0" targetFramework="net461" />
+  <package id="Google.Api.Gax" version="3.0.0" targetFramework="net461" />
+  <package id="Google.Api.Gax.Grpc" version="3.0.0" targetFramework="net461" />
+  <package id="Google.Api.Gax.Grpc.GrpcCore" version="3.0.0" targetFramework="net461" />
+  <package id="Google.Apis" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Cloud.TextToSpeech.V1" version="2.0.0" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.11.4" targetFramework="net461" />
+  <package id="Grpc.Auth" version="2.28.1" targetFramework="net461" />
+  <package id="Grpc.Core" version="2.28.1" targetFramework="net461" />
+  <package id="Grpc.Core.Api" version="2.28.1" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
 </packages>
