--- a/TTS Companion.csproj
+++ b/TTS Companion.csproj
@@ -143,6 +143,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="LowLevelKeyboardListener.cs" />
+    <Compile Include="TTSSettings.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -183,6 +184,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="app.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Grpc.Core.2.28.1\build\net45\Grpc.Core.targets" Condition="Exists('packages\Grpc.Core.2.28.1\build\net45\Grpc.Core.targets')" />
