--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,44 @@ obj/Debug/TTS_Companion.Properties.Resources.resources
 obj/Debug/TTS_Companion_Content.g.cs
 obj/Debug/TTS_Companion_Content.g.i.cs
 bin/Debug/tts_settings.xml
+*.deploy
+*.application
+*.manifest
+obj/Release/TTS_Companion_Content.g.i.cs
+obj/Release/TTS_Companion_Content.g.cs
+obj/Release/TTS_Companion.Properties.Resources.resources
+obj/Release/TTS_Companion.g.resources
+obj/Release/TTS_Companion.exe.config
+obj/Release/TTS Companion.csproj.FileListAbsolute.txt
+obj/Release/TTS Companion.csproj.CopyComplete
+obj/Release/MainWindow.g.i.cs
+obj/Release/MainWindow.g.cs
+obj/Release/MainWindow.baml
+obj/Release/App.g.i.cs
+obj/Release/App.g.cs
+obj/Release/_IsIncrementalBuild
+obj/Release/.NETFramework,Version=v4.8.AssemblyAttributes.cs
+obj/Release/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
+obj/Debug/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
+bin/Release/tts_settings.xml
+bin/Release/TTS_Companion.exe.config
+bin/Release/System.Threading.Tasks.Extensions.xml
+bin/Release/System.Runtime.CompilerServices.Unsafe.xml
+bin/Release/System.Numerics.Vectors.xml
+bin/Release/System.Memory.xml
+bin/Release/System.Buffers.xml
+bin/Release/Newtonsoft.Json.xml
+bin/Release/Microsoft.Bcl.AsyncInterfaces.xml
+bin/Release/Grpc.Core.xml
+bin/Release/Grpc.Core.Api.xml
+bin/Release/Grpc.Auth.xml
+bin/Release/Google.Protobuf.xml
+bin/Release/Google.Cloud.TextToSpeech.V1.xml
+bin/Release/Google.Apis.xml
+bin/Release/Google.Apis.Core.xml
+bin/Release/Google.Apis.Auth.xml
+bin/Release/Google.Api.Gax.xml
+bin/Release/Google.Api.Gax.Grpc.xml
+bin/Release/Google.Api.Gax.Grpc.GrpcCore.xml
+bin/Release/Google.Api.CommonProtos.xml
+bin/Release/CSCore.xml
